# ClaimGraph

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
claimgraph/: __init__.py  algorithms.py  api.py  confidence.py  graph.py  models.py  storage.py
data/: ai_hallucinations.json  intermittent_fasting.json  remote_work.json
docs/: ALGORITHMS.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AddForms.jsx  ClaimPanel.jsx  GraphView.jsx  Navbar.jsx
frontend/src/data/: datasets.js
frontend/src/engine/: graph.js
frontend/src/pages/: Algorithms.jsx  Explorer.jsx  Landing.jsx
static/: app.js  index.html  style.css
tests/: conftest.py  test_algorithms.py  test_api.py  test_graph.py  test_models.py  test_storage.py
