[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claimgraph"
version = "0.1.0"
description = "A DAG of claims and evidence with topological-order confidence propagation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Kanishk" }]
dependencies = ["flask>=3.0,<4.0"]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
include = ["claimgraph*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
